# chip8-emu

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
.cache/clangd/index/: core.cpp.37FBA90CBB6D72C4.idx  core.cpp.A3572FB1D4A55CEC.idx  core.cpp.E3C3CE21B2D9E451.idx  main.cpp.08E4E82AD30FF37F.idx  main.cpp.BAEF194BC62A5CFA.idx  main.cpp.C96F1417482C83A4.idx  platform.cpp.6DD7DB276C5FEC56.idx  platform.cpp.EE9DFA73B90BEEBB.idx  platform.cpp.EEC557AB51561BD5.idx  platform.h.55238FDC80017D4B.idx
include/: core.h  platform.h
src/: core.cpp  main.cpp  platform.cpp
